src/assets/main.css
@import "bootstrap/dist/css/bootstrap.css";
@import "footer.css";
@import "tabs.css";
@import "dropdown.css";
@import "toast.css";
@import "pagination.css";

:root {
  --bs-btn-hover-color: #333;
  --bs-btn-hover-bg: #e6e6e6;
  --bs-btn-hover-border-color: #adadad;
  --monitoring-queue-length: #ea7e00;
  --monitoring-queue-length-light: #eaddce;
  --monitoring-throughput: #176397;
  --monitoring-throughput-light: #cadce8;
  --monitoring-retries: #cc1252;
  --monitoring-retries-light: #e9c4d1;
  --monitoring-processing-time: #258135;
  --monitoring-processing-time-light: #bee6c5;
  --monitoring-critical-time: #2700cb;
  --monitoring-critical-time-light: #c4bce5;
  --sp-blue: #00a3c4;
  --info-icon: #0d6efd;
  --reduced-emphasis: #929e9e;
}

body {
  padding-top: 0px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.42857143;
  background-color: #f2f6f7 !important;
}

#app {
  display: flex;
  flex-direction: column;
  height: 100vh;
  min-width: 930px;
}

.fa {
  color: #929e9e;
}

.badge.badge-important {
  background-color: #ce4844;
  background-image: none;
  border: none;
}

.badge {
  display: inline-block;
  min-width: 10px;
  padding: 3px 7px;
  font-size: 12px;
  font-weight: bold;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  background-color: #777777;
  border-radius: 10px;
}

.container {
  width: 92%;
  max-width: inherit;
  padding: 0;
}

.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

#main-content {
  padding-top: 40px;
  padding-bottom: 40px;
  overflow: auto;
  flex: 1;
}

h1 {
  font-size: 30px;
  font-weight: 700;
  margin: 0 0 32px;
}

h3 {
  font-size: 20px;
  font-weight: 700;
}

h4 {
  font-size: 18px;
}

h5 {
  color: #929e9e;
  display: inline-block !important;
  font-size: 14px;
  font-weight: bold;
  margin: 0 0 14px;
  margin-right: 30px;
  text-transform: uppercase;
}

h6 {
  font-size: 18px;
  font-weight: 700;
  color: #181919;
}

h6 a:hover {
  cursor: pointer;
}

a {
  text-decoration: none;
  color: var(--sp-blue);
  outline: none;
  border: none;
}

a:hover {
  color: var(--sp-blue);
  text-decoration: underline;
}

body {
  padding-top: 0px;
}

span.connection-successful,
span.connection-successful i {
  color: #00c468 !important;
}

span.connection-failed,
span.connection-failed i,
.failed-validation,
.failed-validation i {
  color: #ce4844 !important;
}

.failed-validation {
  margin-left: 5px;
}
span.connection-test {
  position: relative;
  top: 14px;
  left: 10px;
  text-transform: uppercase;
  font-weight: bold;
  color: black;
}

form .connection h3 {
  margin-bottom: 16px;
}

form .connection .form-group {
  padding-left: 0;
}

.connection:nth-child(2) h3 {
  margin-top: 40px;
}

form .connection .form-group input {
  font-size: 16px;
  height: 44px;
}

.form-group {
  margin-bottom: 15px;
}

label {
  display: inline-block;
  max-width: 100%;
  margin-bottom: 5px;
  font-weight: 700;
}

.label {
  display: inline;
  padding: 0.2em 0.6em 0.3em;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25em;
}

.label-info,
.badge-info {
  background-color: #1b809e;
  border-color: #1b809e;
}

.label-warning,
.badge-warning {
  background-color: #aa6708;
  border-color: #aa6708;
}

.label-important,
.badge-important {
  background-color: #fa603d;
  border-color: #fa5833;
}

pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333333;
  word-break: break-all;
  word-wrap: break-word;
  white-space: pre-wrap;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.has-error .form-control {
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px #00000013;
}

.form-control {
  width: 100% !important;
  font-size: 14px;
}

.btn-default {
  padding: 8px 16px;
  color: #333;
  background-color: #fff;
  border-color: #ccc;
}

.btn-default:hover {
  color: #333;
  background-color: #e6e6e6;
  border-color: #adadad;
}

.btn.btn-default.disabled {
  opacity: 0.4;
}

.btn.btn-default.disabled:hover {
  border-color: var(--sp-blue);
}

.btn.btn-primary {
  padding: 8px 16px;
  background-color: var(--sp-blue);
  border-color: #0686aa;
  color: #fff;
}

.btn-primary:hover {
  background-color: #0db3c8;
  border-color: var(--sp-blue);
  color: #fff;
}

.btn-primary i {
  color: #ffffff;
  font-size: 12px;
}

.btn-secondary {
  background-color: #fff;
  color: var(--sp-blue);
  border-color: var(--sp-blue);
}

.btn-secondary:hover {
  color: var(--sp-blue);
  border-color: var(--sp-blue);
  background-color: #fff;
  opacity: 0.7;
}

.btn-secondary.disabled {
  border-color: var(--sp-blue);
}

.row {
  margin-right: 0;
  margin-left: 0;
}

.danger {
  color: #ce4844 !important;
  font-weight: bold !important;
}

.btn-link:hover,
.btn-link:focus {
  color: #23527c;
  text-decoration: underline;
  background-color: transparent;
}

input.check-label {
  margin: 4px 6px 0 0;
  float: left;
}

.btn {
  font-size: 14px;
}

.has-error .help-block,
.has-error .control-label,
.has-error .radio,
.has-error .checkbox,
.has-error .radio-inline,
.has-error .checkbox-inline,
.has-error.radio label,
.has-error.checkbox label,
.has-error.radio-inline label,
.has-error.checkbox-inline label {
  color: #a94442;
}

.control-label {
  float: left;
  padding-top: 7.5px;
  margin-right: -10px;
}

.btn-toolbar {
  padding: 12px 0 0;
  margin-left: 0;
}

.btn-toolbar > .btn,
.btn-toolbar > .btn-group,
.btn-toolbar > .input-group,
.action-btns .btn {
  margin-left: 0;
  margin-right: 5px;
}

.metadata .label-important {
  border-radius: 3px;
  color: white;
  font-size: 13px;
  font-weight: bold;
  margin-right: 20px;
}

.metadata > .btn-sm > i {
  color: var(--sp-blue);
}

.metadata:first-child {
  padding-left: 0;
}

span.metadata {
  display: inline-block;
  padding: 0px 20px 2px 0;
  color: #777f7f;
}

span.metadata.metadata-link i.fa {
  color: var(--sp-blue);
}

.metadata > .in-progress {
  font-style: italic;
  color: white;
}

.metadata-label {
  margin-right: 24px;
  position: relative;
  top: -1px;
}

.metadata > .metadata-label {
  padding: 6px 10px;
}

.btn-xs,
.btn-group-xs > .btn {
  border-radius: 3px;
}

.btn-retry-dismiss {
  position: relative;
  height: 28px;
  width: 74px;
  top: -2px;
  left: 11px;
  line-height: 1;
}

.btn.btn-retry-dismiss {
  border-radius: 4px;
  padding: 8px 16px;
}

.btn.btn-xs {
  font-size: 12px;
}

.btn.disabled,
.btn[disabled],
fieldset[disabled] {
  color: #333;
  background-color: #e6e6e6;
  border-color: #adadad;
  pointer-events: all;
}

.btn.disabled:hover,
.btn[disabled]:hover,
fieldset[disabled]:hover {
  cursor: not-allowed;
}
.box-group:hover {
  background-color: #edf6f7;
  border: 1px solid var(--sp-blue);
  cursor: pointer;
}

.box-group {
  border-top: 1px solid transparent;
  border-bottom: 1px solid #eee;
  padding: 15px 40px;
}

.box-container {
  padding: 0;
  background-color: #fff;
}

.box-container .list-section .col-12.form-group {
  margin-bottom: 0;
}

.select-all {
  width: 127px;
}

.group-message-count {
  color: #a8b3b1;
  font-size: 16px;
  margin: 4px 0 12px;
  display: block;
}

h3.group-message-count {
  color: #a8b3b1;
  font-size: 16px;
  margin: 4px 0 12px;
  display: block;
}

.group-title {
  display: block;
  font-size: 30px;
  margin: 10px 0 0;
}

h2.group-title,
h3.group-title {
  font-weight: bold;
  line-height: 28px;
}

div.alert.alert-warning strong {
  text-transform: uppercase;
}

.sticky-warning.alert.alert-warning,
.alert.alert-warning,
.alert.alert-danger {
  font-size: 16px;
  margin: 25px 0 0;
  height: unset;
}

/* TODO: why do these have to be !important? */
.fake-link {
  color: var(--sp-blue) !important;
  text-decoration: none !important;
}

.tooltip {
  font-size: 12px;
}

